  17. New property Prop_Uncampable -- prevents a mob or room from respawning if non-admin players are present.
  18. VIEW will now notify users if the armor they are interested in is too large or too small for them to wear.
  19. Player description 256 char limit is now gone.  New limit is 128k, expandable in code.
  20. QUALIFY command now has CRAFTING and NON-CRAFTING optional parameters.
# Build 5.8.2 Release 6/13/2014
   0. Database Schema Updated! Run DBUpgrade, OR manually alter table CMCHCL to add CMCLSTS (see appropriate schema file)
   1. CM1Server has "FILE" command now for directory browsing/manipulation
   2. GenAbility additions: can now alter default duration of effect skills, and whether the damage/healing/extra casts happen periodically.
   3. Added an example of a "Channeling" mechanic to spells, though it's pointless with the default combat system. See GenAbility and Spell_ChannelingMissiles/
   4. Coffeemud now has a Char/Account approval system. Use expiration system w/trialdays of 0. Archons are notified of expired/unapproved users.
   5. Clan-Player level PVP ranking support in clans.  CLANKILLS and CLANPVPKILLS commands added.  ClanData WebMacro capable of the same.
   6. Clan forums and web sites supported -- see CLANWEBSITES and CLANFORUMDATA in coffeemud.ini file.  Still thinking about how clan leaders could modify it.
   7. Fighter classes now have armor & shield specializations, plus new expertises (Focuses) to allow wearing/wielding of slightly higher level items
   8. Players and Accounts now track PVPs, Rooms explored, mins played, xp & qp gained, and quests completed. Main web page or TOP command to see winners.
   9. Embedded WebServer upgraded to 2.1
  10. Regen rate formulas are now in INI/control panel. New formula allows faster recovery, esp at higher levels.
  11. PROMPT command now allows you to include current and max action points per tick %p and %P