@@ -304,17 +304,21 @@ RESET_AREA=RESET
 RESET_REJUV=RESET
 RESET_MOBSTATS=RESET
 RESET_ITEMSTATS=RESET
+RESET_PASSWORD=RESET
+RESET_PASSWORDS=RESET
 RESET=\
 Command  : RESET\n\r\
 Usage    : RESET (REJUV) ROOM/AREA (ITEMS/MOBS)\n\r\
 Usage    : RESET MOBSTATS ROOM/AREA/WORLD/CATALOG (NOSAVE) ([AREANAME])\n\r\
 Usage    : RESET ITEMSTATS ROOM/AREA/WORLD/CATALOG (NOSAVE) ([AREANAME])\n\r\
 Usage    : RESET INIFILE\n\r\
+Usage    : RESET PASSWORD [NAME]\n\r\
 Example  : reset room\n\r\
 Example  : reset area\n\r\
 Example  : reset rejuv area items\n\r\
 Example  : reset mobstats world\n\r\
 Example  : reset itemstats catalog nosave midgaard\n\r\
+Example  : reset password krogon\n\r\
 Short(s) : \n\r\
 The reset room or area command will revive any wandered or \
 dead mobs whose location is the same as the invokers.  Any \
@@ -337,6 +341,10 @@ allow a "preview" of changes to be made by specifying the "nosave" \
 parameter on the command line, which prevents permanent changes.  \
 Area names may also be specified on the command line to cause the \
 command to skip certain areas (for use with WORLD parameter only).\n\r\
+\n\r\
+The reset password command will let you generate a random password \
+for the given player or account and email it to their address on file, \
+or change it to a neutral word when no email address is on file.\n\r\
 \n\r\
 You can also reload your ini settings, or the lists.ini file using \
 reset inifile.
